add error messages on the page on invalid input
To fix: the error needs to be consistent in height to keep the layout clean (hex-error goes to second line causing issues)

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
                 <button class="info button" id="info-decimal">i</button>
                 <label for="decimal" class="lab-input label">Decimal:
                 </label>
+                <label for="decimal" id="error-decimal" class="body error">The accepted values are numbers [0-9]
+                </label>
                 <input type="text" name="decimal" id="decimal" value="0" inputmode="numeric" class="lab-input">
                 <div class="buttons-wrapper">
                     <button type="button" class="button minus">-</button>
@@ -94,6 +96,8 @@
             <div class="typewrapper binary">
                 <button class="info button" id="info-decimal">i</button>
                 <label for="binary" class="lab-input label">Binary:
+                </label>
+                <label for="binary" id="error-binary" class="body error">The accepted values are 0 and 1
                 </label>
                 <input type="text" name="binary" id="binary" value="0" inputmode="numeric" class="lab-input">
                 <div class="buttons-wrapper">
@@ -120,6 +124,8 @@
                 <button class="info button" id="info-octal">i</button>
                 <label for="octal" class="lab-input label">Octal:
                 </label>
+                <label for="octal" id="error-octal" class="body error">The accepted values are numbers [0-7]
+                </label>
                 <input type="text" name="octal" id="octal" value="0" inputmode="numeric" class="lab-input">
                 <div class="buttons-wrapper">
                     <button type="button" class="button minus">-</button>
@@ -143,6 +149,8 @@
             <div class="typewrapper hexadecimal">
                 <button class="info button" id="info-hexadecimal">i</button>
                 <label for="hexadecimal" class="lab-input label">Hexadecimal:
+                </label>
+                <label for="hexadecimal" id="error-hexadecimal" class="body error">The accepted values are numbers and letters [A-F]
                 </label>
                 <input type="text" name="hexadecimal" id="hexadecimal" value="0" class="lab-input">
                 <div class="buttons-wrapper">
