Fix layout issues on hexa
More info in the console for the error, in the page it's stays simple

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <button class="info button" id="info-decimal">i</button>
                 <label for="decimal" class="lab-input label">Decimal:
                 </label>
-                <label for="decimal" id="error-decimal" class="body error">The accepted values are numbers [0-9]
+                <label for="decimal" id="error-decimal" class="error">Please insert a valid decimal number
                 </label>
                 <input type="text" name="decimal" id="decimal" value="0" inputmode="numeric" class="lab-input">
                 <div class="buttons-wrapper">
@@ -97,7 +97,7 @@
                 <button class="info button" id="info-decimal">i</button>
                 <label for="binary" class="lab-input label">Binary:
                 </label>
-                <label for="binary" id="error-binary" class="body error">The accepted values are 0 and 1
+                <label for="binary" id="error-binary" class="error">Please insert a valid binary number
                 </label>
                 <input type="text" name="binary" id="binary" value="0" inputmode="numeric" class="lab-input">
                 <div class="buttons-wrapper">
@@ -124,7 +124,7 @@
                 <button class="info button" id="info-octal">i</button>
                 <label for="octal" class="lab-input label">Octal:
                 </label>
-                <label for="octal" id="error-octal" class="body error">The accepted values are numbers [0-7]
+                <label for="octal" id="error-octal" class="error">Please insert a valid octal number
                 </label>
                 <input type="text" name="octal" id="octal" value="0" inputmode="numeric" class="lab-input">
                 <div class="buttons-wrapper">
@@ -150,7 +150,7 @@
                 <button class="info button" id="info-hexadecimal">i</button>
                 <label for="hexadecimal" class="lab-input label">Hexadecimal:
                 </label>
-                <label for="hexadecimal" id="error-hexadecimal" class="body error">The accepted values are numbers and letters [A-F]
+                <label for="hexadecimal" id="error-hexadecimal" class="error">Please insert a valid hexadecimal number
                 </label>
                 <input type="text" name="hexadecimal" id="hexadecimal" value="0" class="lab-input">
                 <div class="buttons-wrapper">
